test/subjects/errors/break_more_than_allowed1.php
<?php

	break 3; // { phc-error: Cannot break/continue 3 levels }

?>
